--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         </p>
         <p style="text-align: right">
             يمكنك تحميل هذا المستند بالنقر على
-            <a href="sample.pdf" download="Rapport_Medical.pdf">تحميل</a>
+            <a href="sample.pdf" download="Rapport.pdf">تحميل</a>
         </p>
     </div>
     <div class="pages-div">
-        <img src="Rapport N°372367-1.jpg" alt="Rapport médical" style="width:100%; max-width:800px;">
+        <img src="Rapport.jpg" alt="Rapport médical" style="width:100%; max-width:800px;">
     </div>
 
 </body>
