--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 
         <p>
             Vous pouvez télécharger ce document en cliquant sur
-            <a href="sample.pdf" download="Rapport_Medical.pdf">"Télécharger"</a>
+            <a href="rapport.pdf" download="Rapport_Medical.pdf">"Télécharger"</a>
         </p>
         <p style="text-align: right">
             يمكنك تحميل هذا المستند بالنقر على
